[package]
name = "lawrencium"
version = "0.0.0-alpha"
authors = ["Lokathor <zefria@gmail.com>"]
repository = "https://github.com/Lokathor/lawrencium"
categories = ["external-ffi-bindings", "os::windows-apis"]
edition = "2018"
license = "Zlib"

[dependencies]

[features]
struct_debug = []
struct_eq = []
struct_default = []
struct_hash = []

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
[badges]
appveyor = { repository = "Lokathor/lawrencium" }
