[package]
name = "lawrencium"
description = "Lr103"
version = "1.0.0"
authors = ["Lokathor <zefria@gmail.com>"]
repository = "https://github.com/Lokathor/lawrencium"
categories = ["external-ffi-bindings", "os::windows-apis"]
edition = "2018"
license = "Zlib OR Apache-2.0 OR MIT"

[dependencies]

[features]
struct_debug = []
struct_eq = []
struct_hash = []
struct_default = []

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"

[badges]
appveyor = { repository = "Lokathor/lawrencium" }
